# CS2-Game-Project

./: .gitignore  CMakeLists.txt  CMakeLists_BACKUP_662.txt  CMakeLists_BASE_662.txt  CMakeLists_REMOTE_662.txt  Enemy.cpp  Enemy.hpp  main.cpp  map.cpp  map.h  map.hpp  player.cpp  player.hpp  slime.cpp  slime.qrc
include/: AudioManager.hpp  Enemy.hpp  Heart.hpp  campfire.hpp  characters.hpp  characterstats.hpp  deathwindow.hpp  gameview.hpp  house_interior-2.hpp  house_interior.hpp  levelcleared.hpp  levelintro.hpp  map.hpp  map2.hpp  pausewindow.hpp  player.hpp  projectile.hpp  slime.hpp
resources/house_interior/CSV/: house_interior.csv
resources/map-data/: level-1-updated.csv  level-1.csv
src/: Enemy.cpp  Heart.cpp  campfire.cpp  characters.cpp  characterstats.cpp  deathwindow.cpp  gameview.cpp  house_interior-2.cpp  house_interior.cpp  levelcleared.cpp  levelintro.cpp  map.cpp  map2.cpp  pausewindow.cpp  player.cpp  projectile.cpp  slime.cpp
